workshop04/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-headless
  labels:
    app: minio
spec:
  selector:
    app: minio
  clusterIP: None
  ports:
    - port: 9000
      targetPort: 9000
      name: data
    - port: 9090
      targetPort: 9090
      name: console
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
spec:
  selector:
    app: minio
  ports:
    - port: 9000
      targetPort: 9000
      name: data
    - port: 9090
      targetPort: 9090
      name: console
