workshop04/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: 20
  labels:
    app: minio
spec:
  ingressClassName: nginx
  rules:
    - host: data-122.10.22.1.nip.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: minio
                port:
                  number: 9000
    - host: console-122.10.22.1.nip.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: minio
                port:
                  number: 9090
